--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,8 @@
     "koa-logger": "^3.2.0",
     "koa-respond": "^1.0.1",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.1.6"
+    "mongoose": "^5.1.6",
+    "mongoose-type-email": "^1.0.9"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
