--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@koa/cors": "^2.2.1",
+    "async-each": "^1.0.1",
     "cross-env": "^5.1.4",
     "dotenv": "^5.0.1",
     "jsonwebtoken": "^8.3.0",
