--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "concurrently": "^3.6.0"
   },
   "dependencies": {
+    "async": "^2.6.1",
+    "async-each": "^1.0.1",
     "camerastream-frontend": "file:camerastream-frontend",
     "koalerplate": "file:backend"
   }
