--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "concurrently": "^3.6.0"
   },
   "dependencies": {
+    "arr-flatten": "^1.1.0",
     "async": "^2.6.1",
     "async-each": "^1.0.1",
     "camerastream-frontend": "file:camerastream-frontend",
