--- a/backend/package.json
+++ b/backend/package.json
@@ -37,7 +37,8 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "mongoose": "^5.1.6",
-    "mongoose-type-email": "^1.0.9"
+    "mongoose-type-email": "^1.0.9",
+    "ws": "^6.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
