--- a/camerastream-frontend/package.json
+++ b/camerastream-frontend/package.json
@@ -18,6 +18,7 @@
     "material-icons": "^0.2.3",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.2",
+    "vue-native-websocket": "^2.0.8",
     "vue-router": "^3.0.1",
     "vuetify": "^1.1.8",
     "vuex": "^3.0.1"
